fixed amounts, fixed table z-index

--- a/ui/styles/globals.css
+++ b/ui/styles/globals.css
@@ -6,3 +6,7 @@
     filter: blur(3px);
     -webkit-filter: blur(3px);
 }
+
+.table th:first-child {
+    z-index: 0;
+}
